--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,8 +1,9 @@
 .form-control {
   height: 50px;
   line-height: 50px;
+  border: none;
   border-radius: 4px;
-  color: #777;
+  color: #fff;
   option {
     color: #777;
   }
