--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -26,9 +26,10 @@ $base-height: 1.4;
  * ------------------------------------- */
 // Scheme
 $brand-color: #D23333;
-$brand-primary: #d55f56;
-$brand-secondary: #c062c3;
+$brand-primary: #ff3778;
+$brand-secondary: #ff923b;
 /* #f54b19, #7166b9 */
+/* #fa8241, #d0236e */
 
 $red: #EE5F5B;
 $blue: #469AE0;
