--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
       <%= link_to root_path do %>
         <h1>FreshAir</h1>
       <% end %>
       <h2>Cheapest trip for next week-end</h2>
     </div>
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
         <div class="trips-card">
         <%= form_tag('trips', id: 'trips-index', method: 'get') do %>
           <div class="row">
