--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,10 +6,10 @@
 }
 
 .btn-success, .btn-success:focus, .btn-success:active {
-  background-color: #904e95;
+  background-color: rgba(0, 0, 0, 0.25);
   color: #fff;
   border: none;
   &:hover {
-    background-color: darken($brand-secondary, 10%);
+    background-color: rgba(0, 0, 0, 0.45);
   }
 }
