I18n and mixpanel conf

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -55,7 +55,7 @@
             <div class="housing-section">
               <div class="housing-details">
                 <div>
-                  <small>Guests</small><br />
+                  <small><%= t('.guests') %></small><br />
                   <%= params[:people].to_s + ' people' %>
                 </div>
                 <div class="logo" style='background-image: url(<%= asset_path 'airbnb' %>)'></div>
